--- a/src/6_1_borschPage/borsch.html
+++ b/src/6_1_borschPage/borsch.html
@@ -6,24 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- <link rel="stylesheet" href="/2_normalize/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="/3_textStyles/textStyle.css"> -->
-  <!-- Bootstrap-styles -->
-  <!-- <link rel="stylesheet" href="/1_bootstrap-5.2.0-dist/css/bootstrap.min.css"> -->
-  <!-- Сustom-styles -->
-  <!-- <link rel="stylesheet" href="/6_1_borschPage/productsCustomStyle.css"> -->
-  <!-- <link rel="stylesheet" href="/6_1_borschPage/borschCustomStyle.css"> -->
-  <!-- <link rel="stylesheet" href="/7_headerAndFooterCustomStyle/headerAndFooterCustomStyle.css"> -->
-
-  <!-- <script defer src="/1_bootstrap-5.2.0-dist/js/jquery-3.6.0.min.js"></script> -->
-  <!-- <script defer src="/1_bootstrap-5.2.0-dist/js/popper.min.js"></script> -->
-  <!-- Bootstrap-script -->
-  <!-- <script defer src="/1_bootstrap-5.2.0-dist/js/bootstrap.min.js"></script> -->
-  <!-- linksMultiCalculators-script -->
-  <!-- <script defer src="/8_linksMultiCalculators/linksHeaderMultiCalculators.js"></script> -->
-  <!-- Calculator-script -->
-  <!-- <script type="module" defer src="/6_1_borschPage/borschScript.js"></script> -->
-
   <title>Борщ - расчет ингридиентов</title>
 </head>
 
@@ -64,8 +46,8 @@
                 </li>
                 <li><a id="header__todoList" class="dropdown-item" href="./dailyTodoList.html">Ежедневный список дел</a>
                 </li>
-                <li><a id="header__password" class="dropdown-item" href="./passwordGenerator">Генератор паролей</a></li>
-                <li><a id="header__notepad" class="dropdown-item" href="./notepad">Блокнот</a></li>
+                <li><a id="header__password" class="dropdown-item" href="./passwordGenerator.html">Генератор паролей</a></li>
+                <li><a id="header__notepad" class="dropdown-item" href="./notepad.html">Блокнот</a></li>
                 <li><a id="header__informationIp" class="dropdown-item" href="./informationIp.html">Информация об IP</a>
                 </li>
               </ul>
